--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jtpnew",
+  "name": "ytpanimate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "classnames": "^2.3.2",
+    "framer-motion": "^12.4.7",
+    "gatsby": "^5.9.1",
+    "gatsby-plugin-sass": "^6.9.0",
+    "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
+    "locomotive-scroll": "^4.1.4",
+    "next": "15.1.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-loadable": "^5.5.0",
+    "sass": "^1.62.1",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
